--- a/css/styles.css
+++ b/css/styles.css
@@ -74,13 +74,13 @@ body {
 .base-button {
    display: block;
    box-sizing: border-box;
-   width: 180px;
+   min-width: 169px;
    height: 56px;
    border-radius: 4px;
+   border: 1px solid transparent;
+   
    padding: 16px 32px;
-
-   margin-left: auto;
-   margin-right: auto;
+   margin: 0 auto;
 
    font-family: inherit;
    background-color: var(--radio-buttom-text-color);
@@ -92,6 +92,7 @@ body {
    /* align-items: center;*/
    letter-spacing: 0.04em;
    cursor: pointer;
+   text-align: center;
 }
 
 .base-button:hover,
