--- a/css/styles.css
+++ b/css/styles.css
@@ -62,11 +62,10 @@ body {
 }
 
 .conteiner {
-   display: block;
-   box-sizing: border-box;
+   /* display: block; */
+   /* box-sizing: border-box; */
    width: 1440px;
-   margin-left: auto;
-   margin-right: auto;
+   margin: 0 auto;
    
 }
 
@@ -176,6 +175,8 @@ body {
    line-height: 1.5;
    letter-spacing: 0.02em;
    text-decoration: none; */
+   padding: 0;
+   margin: 0;
    list-style: none;
 }
 
@@ -230,14 +231,19 @@ body {
 /* Section Main Slogan H1  */
 .hero {
    background-color: var(--title-text-color-basic);
+
+   text-align: center;
 }
 
 .hero-title {
+   margin-top: 0;
+   margin-bottom: 48px;
+
    color: var(--color-white);
    font-weight: 700;
    font-size: 56px;
    line-height: 1.07;
-   text-align: center;
+   /* text-align: center; */
    letter-spacing: 0.02em;
 }
 
