--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,8 @@ body {
 .conteiner {
    /* display: block; */
    /* box-sizing: border-box; */
-   width: 1440px;
+   width: 1158px;
+   padding: 0 15px;
    margin: 0 auto;
    
 }
@@ -268,6 +269,8 @@ body {
 .section-title-sz-one {}
 
 .section-title-sz-two {
+   padding: 0;
+   margin: 0;
    color: var(--title-text-color-basic);
    font-weight: 700;
    font-size: 36px;
@@ -279,6 +282,8 @@ body {
 }
 
 .section-title-sz-three {
+   padding: 0;
+   margin: 0;
    color: var(--title-text-color-basic);
    font-weight: 500;
    font-size: 20px;
