--- a/css/styles.css
+++ b/css/styles.css
@@ -250,6 +250,8 @@ body {
 
 /* Main Content  */
 .section {
+   padding-top: 120px;
+   padding-bottom: 120px;
    /* color: var(--body-text-color); */
 
 }
@@ -284,6 +286,7 @@ body {
 .section-title-sz-three {
    padding: 0;
    margin: 0;
+   margin-bottom: 8px;
    color: var(--title-text-color-basic);
    font-weight: 500;
    font-size: 20px;
