--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  outline: 2px solid #01DF01;
+  /* outline: 2px solid #01DF01; */
 }
 
 .all-dordx {
