--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@
 *::after {
   box-sizing: border-box;
   /* outline: 2px solid #01DF01; */
-  
+
 }
 
 .all-dordx {
@@ -73,6 +73,10 @@ body {
 
 .link-rst {
    text-decoration: none;
+}
+
+.heder-bord {
+   border-bottom: 1px solid var(--body-text-color);
 }
 
 .conteiner {
@@ -366,6 +370,7 @@ body {
    width: 360px;
    margin-right: 24px;
    margin-bottom: 48px;
+   border-bottom: 1px solid var(--body-text-color);
 }
 
 .lst-work-exmpl .lst-card:nth-child(3n) {
