--- a/css/styles.css
+++ b/css/styles.css
@@ -67,13 +67,13 @@ body {
    list-style: none;
 }
 
-.list-rst {
+/* .list-rst {
    list-style: none;
 }
 
 .link-rst {
    text-decoration: none;
-}
+} */
 
 .heder-bord {
    border-bottom: 1px solid var(--body-text-color);
@@ -371,7 +371,7 @@ body {
    margin-right: 24px;
    margin-bottom: 48px;
    border-bottom: 1px solid var(--body-text-color);
-   
+
 }
 
 .lst-work-exmpl .lst-card:nth-child(3n) {
