--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  /* outline: 2px solid #01DF01; */
+  outline: 2px solid #01DF01;
 
 }
 
@@ -252,8 +252,6 @@ body {
 
 /* list res01 */
 
-
-
 .list .link-item {
    display: block;
    padding-top: 24px;
@@ -369,6 +367,11 @@ body {
    margin-right: 24px;
 }
 
+.section-wrk-dir .item-wrk-3col {
+   width: calc((100%-48px)/3);
+   margin-right: 24px;
+}
+
 .section-wrk-dir .item-wrk:nth-child(4n) {
    margin-right: 0;
 }
@@ -403,12 +406,13 @@ body {
 .lst-work-exmpl {
    display: flex;
    flex-wrap: wrap;
-  
+   /* gap: 48px 24px; */
 }
 
 .lst-work-exmpl .lst-card {
-   /* width: 360px; */
-   width: calc((100%-48px)/3);
+  /* width: 360px; */
+   width: calc((100%-48px) / 3);
+   /* flex-basis: calc((100%-48px)/3); */
    margin-right: 24px;
    margin-bottom: 48px;
    border-bottom: 1px solid var(--body-text-color);
@@ -473,6 +477,8 @@ body {
 /* Footer  */
 
 .footer-set {
+   padding-top: 100px;
+   padding-bottom: 100px;
    background-color: var(--title-text-color-basic);
    color: var(--color-cornf-lower);
    
@@ -481,7 +487,7 @@ body {
 .footer-parag {
    margin: 0;
    padding: 0;
-   padding-bottom: 100px;
+   /* padding-bottom: 100px; */
    width: 264px;
    color: var(--color-cloud);
 }
@@ -494,7 +500,8 @@ body {
    display: block;
    margin: 0;
    margin-bottom: 18px;
-    padding-top: 100px;
+   /* padding-top: 100px; */
+   width: 264px;
 
    color: var(--radio-buttom-text-color);
    font-family: 'Raleway', sans-serif;
