--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  outline: 2px solid #01DF01;
+  /* outline: 2px solid #01DF01; */
 
 }
 
@@ -76,7 +76,7 @@ body {
 } */
 
 .heder-bord {
-   border-bottom: 1px solid var(--body-text-color);
+   border-bottom: 1px solid var(--color-cornf-lower);
 }
 
 .conteiner {
@@ -177,21 +177,22 @@ body {
    font-family: Roboto, sans-serif;
    background-color: var(--color-cloud);
    color: var(--radio-buttom-text-color);
-   border-color: transparent;
    font-weight: 500;
    font-size: 16px;
    line-height: 1.5;
    /* align-items: center;*/
    letter-spacing: 0.04em;
+   border: 1px solid var(--color-cornf-lower);
+   border-radius: 4px;
    cursor: pointer;
 }
-
 
 
 .filter-button:hover,
 .filter-button:focus {
    background-color: var(--color-target);
    color: var(--color-white);
+   border-color: transparent;
 }
 
 
@@ -386,6 +387,10 @@ body {
    background-color: var(--color-white);
    text-align: center;
    border: 0px;
+   box-shadow: 0px 1px 6px 
+   rgba(46, 47, 66, 0.08), 0px 1px 1px 
+   rgba(46, 47, 66, 0.16), 0px 2px 1px 
+   rgba(46, 47, 66, 0.08);
    border-radius: 0 0 4px 4px;
 }
 
@@ -410,12 +415,14 @@ body {
 }
 
 .lst-work-exmpl .lst-card {
-  /* width: 360px; */
-   width: calc((100%-48px) / 3);
-   /* flex-basis: calc((100%-48px)/3); */
+   /* width: 360px; */
+   /* width: calc((100%-48px) / 3); */
+   max-width: 360px;
+   flex-basis: calc((100%-48px)/3);
    margin-right: 24px;
    margin-bottom: 48px;
-   border-bottom: 1px solid var(--body-text-color);
+   padding-bottom: 32px;
+   border: 1px solid var(--color-cornf-lower);
 
 }
 
@@ -487,7 +494,6 @@ body {
 .footer-parag {
    margin: 0;
    padding: 0;
-   /* padding-bottom: 100px; */
    width: 264px;
    color: var(--color-cloud);
 }
@@ -499,7 +505,7 @@ body {
 .footer-link-logos {
    display: block;
    margin: 0;
-   margin-bottom: 18px;
+   margin-bottom: 16px;
    /* padding-top: 100px; */
    width: 264px;
 
