default links color

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,10 @@ a {
   margin: 0;
 }
 
+a {
+  color: var(--body-text-color);
+}
+
 /* Global project settings */
 body {
   font-family: Roboto, sans-serif;
