--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,10 @@ body {
   margin-right: auto;
 }
 
+.conteiner-a.mn-foto {
+
+}
+
 .cont-flx {
   display: flex;
   align-items: center;
@@ -298,7 +302,8 @@ body {
 
 .section-slog {
   display: block;
-  height: 600px;
+  /* height: 600px; */
+  max-width: 1440px;
   padding-top: 188px;
   padding-bottom: 188px;
   background-image: linear-gradient(
@@ -489,10 +494,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-top: 96px;
-  padding-bottom: 72px;
-  /* margin-top: 96px;
-   margin-bottom: 72px; */
+  margin-bottom: 72px;
 }
 
 .filter-conteiner .item-flt {
@@ -509,7 +511,7 @@ body {
 
   font-family: Roboto, sans-serif;
   background-color: var(--color-cloud);
-  color: var(--radio-buttom-text-color);
+  color: var(--logo-txt-color-iris);
   font-weight: 500;
   font-size: 16px;
   line-height: 1.5;
@@ -524,6 +526,10 @@ body {
   background-color: var(--color-target);
   color: var(--color-white);
   border-color: transparent;
+  box-shadow: 
+    0px 3px 1px rgba(0, 0, 0, 0.1), 
+    0px 2px 1px rgba(0, 0, 0, 0.08), 
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Work Examole Card Style  */
@@ -536,10 +542,11 @@ body {
   /* width: 360px; */
   /* width: calc((100%-48px) / 3); */
   max-width: 360px;
-  flex-basis: calc((100%-48px) / 3);
+  /* flex-basis: calc((100%-48px) / 3); */
   margin-right: 24px;
   margin-bottom: 48px;
   padding-bottom: 32px;
+  gap: 48px 24px;
 
   background-color: var(--color-white);
   border: 1px solid var(--color-cornf-lower);
@@ -631,7 +638,7 @@ body {
   margin-bottom: 18px;
   width: 264px;
 
-  color: var(--radio-buttom-text-color);
+  color: var(--logo-txt-color-iris);
   font-family: "Raleway", sans-serif;
   /* font-style: normal; */
   font-weight: 800;
