--- a/css/styles.css
+++ b/css/styles.css
@@ -430,9 +430,13 @@ body {
 
 
 .card-foto-sing {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   max-width: 360px;
+  max-height: 300px;
   margin-right: 24px;
-  flex-basis: calc((100%-48px) / 3);
+  flex-basis: calc((100% - 48px) / 3);
   border: 1px solid var(--color-cornf-lower);
 }
 
