--- a/css/styles.css
+++ b/css/styles.css
@@ -77,7 +77,7 @@ body {
 }
 
 .conteiner-a.mn-foto {
-
+  
 }
 
 .cont-flx {
@@ -310,7 +310,7 @@ body {
   /* height: 600px; */
   padding-top: 188px;
   padding-bottom: 188px;
-  
+
   background-image: linear-gradient(
       to bottom,
       rgba(0, 0, 0, 0.5) 20%,
@@ -322,6 +322,11 @@ body {
   background-size: cover;
   background-position: center;
   background-color: var(--body-text-color);
+}
+
+.blok-slog-bkgr {
+  /* width: 1440px; */
+  
 }
 
 .blok-slog {
